--- a/Scripts/09_Updated Results.Rmd
+++ b/Scripts/09_Updated Results.Rmd
@@ -15,6 +15,8 @@ source("00_packages_v1.R", local = knitr::knit_global())
 source("01_diagnostic function_v1.R", local = knitr::knit_global())
 source("02_Trait transformations and data prep_v1.R", local = knitr::knit_global())
 source("04_Models per trait_v1.R", local = knitr::knit_global())
+source("05_Summary plots.R", local = knitr::knit_global())
+source("08_RDA_v1.R", local = knitr::knit_global())
 ```
 
 # Model 1: trait \~ mainland/island + year + (1\|ID)
@@ -461,22 +463,37 @@ plot(EM_leaflet2) + labs(title = "Leaflet Length")
 
 This model looks at the differences between *Tribulus* mericarps, flowers and leaves within the Galapagos islands that differ in the distribution of seed predators *G. magnirostis* and *G. cornirostris.* Darwin's finches that are known to easily predate mericarps.
 
++------------------------------------------------------+-----------------------------------------------------+
 | Presence of *G. magnirostris* and *G. Cornirrostris* | Absence of *G. magnirostris* and *G. Cornirrostris* |
-|------------------------------------------------------|-----------------------------------------------------|
++======================================================+=====================================================+
 | Daphne Major                                         | Floreana                                            |
++------------------------------------------------------+-----------------------------------------------------+
 | Daphne Minor                                         | San Cristobal                                       |
++------------------------------------------------------+-----------------------------------------------------+
 | Darwin                                               | Santa Fe                                            |
++------------------------------------------------------+-----------------------------------------------------+
 | Fernandina                                           | Champion                                            |
++------------------------------------------------------+-----------------------------------------------------+
 | Genovesa                                             | Baltra                                              |
++------------------------------------------------------+-----------------------------------------------------+
 | Guy Fawkes Oeste                                     | Enderby                                             |
++------------------------------------------------------+-----------------------------------------------------+
 | Isabela                                              | Gardner                                             |
++------------------------------------------------------+-----------------------------------------------------+
 | Pinta                                                | Daphne Major \<1983                                 |
++------------------------------------------------------+-----------------------------------------------------+
 | Plaza Norte                                          |                                                     |
++------------------------------------------------------+-----------------------------------------------------+
 | Rabida                                               |                                                     |
++------------------------------------------------------+-----------------------------------------------------+
 | Santa Cruz                                           |                                                     |
++------------------------------------------------------+-----------------------------------------------------+
 | Santiago                                             |                                                     |
++------------------------------------------------------+-----------------------------------------------------+
 | Seymour Norte                                        |                                                     |
++------------------------------------------------------+-----------------------------------------------------+
 | Espanola                                             |                                                     |
++------------------------------------------------------+-----------------------------------------------------+
 
 : Finch Island distribution. \*Magnirostris arrived to Daphne Major after 1984
 
