--- a/Scripts/10_Final-Results.Rmd
+++ b/Scripts/10_Final-Results.Rmd
@@ -3,15 +3,17 @@ title: "Results"
 author: "Daniel Reyes"
 date: "6/3/2021"
 output:
+  html_document:
+    css: mystyle.css
+    toc: yes
+    df_print: paged
   word_document:
     toc: yes
   pdf_document:
     toc: yes
     number_sections: yes
-  html_document:
-    toc: yes
-    df_print: paged
 bibliography: references.bib
+always_allow_html: true
 ---
 
 ```{r setup, include=FALSE}
@@ -28,7 +30,9 @@ source("11_PCA_v1.R", local = knitr::knit_global())
 ```{r install packages, include=FALSE}
 library(xtable) #For making ANOVA outcomes dataframes and tables
 library(broom) #For making other statistical objects into Tidy Tibbles
-
+library(ggpubr) #For arrage ggplots into a single plot
+library(knitr)
+library(kableExtra)
 ```
 
 # Results
@@ -39,8 +43,7 @@ library(broom) #For making other statistical objects into Tidy Tibbles
 
 ### Mericarp
 
-We found that mericarps in island populations are larger but less spiny than mericarps in mainland populations. Mericarps on islands are 7% longer, 5% wider, 12% deeper than mainland populations (X^2(1)=[14.10], p = <0.001; X^2(1)=[12.43], p = <0.001; X^2(1)=[52.33], p = <0.001). Their upper spines are 6% more separated between them on island populations than on mainland (X^2(1)=[5.85], p = 0.015). However, lower spines are more common on mainland populations than on island populations (X^2(1)=[76.74], p = 0.001).
-
+We found that mericarps in island populations are larger but less spiny than mericarps in mainland populations. Mericarps on islands are 7% longer, 5% wider, 12% deeper than mainland populations ($X^2$ = 14.10, p = \<0.001; $X^2$ = 12.43, p = \<0.001; $X^2$ = 52.33, p = \<0.001). Their upper spines are 6% more separated between them on island populations than on mainland ($X^2$ = 5.85, p = 0.015). However, lower spines are more common on mainland populations than on island populations ($X^2$ = 76.74, p = 0.001). The effect of year was significant on all traits ($X^2$ = 8.61, p = \<0.001; $X^2$ = 8.16, p = \<0.001; $X^2$ = 19.54, p = \<0.001; $X^2$ = 0.091, p = \<0.001).
 
 ```{r Univariate Model 1 Mericarps, echo=FALSE, fig.cap= "Estimated means of mericarp traits between island and mainland populations.", fig.height=5}
 
@@ -57,24 +60,59 @@ figure_mericarp_model1 <- ggarrange(ggplot_length,
 figure_mericarp_model1
 ```
 
-```{r anova mericarps model 1, echo=FALSE, results='asis'}
-knitr::kable(Anova(meri_length_m1), caption = "ANOVA Length (mm)")
+```{r anova mericarps model 1, include=FALSE, results='asis'}
+table1 <- as.data.frame(Anova(meri_length_m1))
 
-knitr::kable(Anova(meri_width_m3), caption = "ANOVA Width (mm)")
+row.names(table1)[row.names(table1) == "mainland_island"] <- "Length"
+row.names(table1)[row.names(table1) == "year_collected"] <- "Year Length"
 
-knitr::kable(Anova(meri_depth_m1), caption = "ANOVA Depth (mm)")
+table2 <- as.data.frame(Anova(meri_width_m3))
 
-knitr::kable(Anova(meri_tip_distance_m7), caption = "ANOVA Tip Distance (mm)")
+row.names(table2)[row.names(table2) == "mainland_island"] <- "Width"
+row.names(table2)[row.names(table2) == "year_collected"] <- "Year Width"
 
-knitr::kable(Anova(meri_lower_spines_m1_glmm), caption = "ANOVA Lower Spines")
+table3 <- as.data.frame(Anova(meri_depth_m1))
+
+row.names(table3)[row.names(table3) == "mainland_island"] <- "Depth"
+row.names(table3)[row.names(table3) == "year_collected"] <- "Year Depth"
+
+table4 <- as.data.frame(Anova(meri_tip_distance_m7))
+
+row.names(table4)[row.names(table4) == "mainland_island"] <- "Tip Distance"
+row.names(table4)[row.names(table4) == "year_collected"] <- "Year Tip Distance"
+
+table5 <- as.data.frame(Anova(meri_lower_spines_m1_glmm))
+
+row.names(table5)[row.names(table5) == "mainland_island"] <- "Lower Spines"
+row.names(table5)[row.names(table5) == "year_collected"] <- "Year Lower Spines"
+
+mericarp_tables <- bind_rows(table1, table2, table3, table4, table5)
+
+mericarp_tables <- dplyr::select(mericarp_tables, !Df) # All degrees of freedom are 1
+mericarp_tables <- rownames_to_column(mericarp_tables, var = "Trait")
+
+mericarp_tables <- mutate(mericarp_tables, Model = "",
+                                     Dataset = "")
+colnames(mericarp_tables)[3] = "P"
+colnames(mericarp_tables)[2] <- "Chisq"
+
+mericarp_tables <- dplyr::select(mericarp_tables, Model, Dataset, Trait, Chisq, P)
+
+newRow <- data.frame(Model = "Model 1: Mainland/Island", Dataset = "Mericarp", Trait = " ", Chisq = "1", P = "1")
+newRow <- newRow %>% mutate_at(vars(Chisq,
+                                    P), list(double))
+
+newRow <- dplyr::mutate(newRow, Trait = "Length", Chisq = 14.10138911, P = 1.732158e-04)
+
+mericarp_tables <- bind_rows(newRow, mericarp_tables)
+mericarp_tables <- dplyr::slice(mericarp_tables, (-c(2)))
 ```
-
 
 \newpage
 
 ### Flower
 
-We found no significant differences between mainland and island populations on petal length (p = 0.299). However, there was a significant result for year (X^2(1)=[15.89], p = <0.001) between mainland and island populations.
+We found no significant differences between mainland and island populations on petal length (p = 0.299). However, there was a significant result for year ($X^2$ = 15.89, p = \<0.001) between mainland and island populations.
 
 ```{r Univariate Model 1 Flowers, echo=FALSE, fig.cap= "Estimated means of petal length between island and mainland populations.", fig.height=5}
 
@@ -82,15 +120,36 @@ ggplot_flower
 
 ```
 
-```{r anova flower model 1, echo=FALSE, results='asis'}
-knitr::kable(Anova(flower_m1), caption = "ANOVA Petal Length (mm)")
+```{r anova flower model 1, include=FALSE, results='asis'}
+table7 <- (Anova(flower_m1))
+row.names(table7)[row.names(table7) == "mainland_island"] <- " Petal Length"
+row.names(table7)[row.names(table7) == "year_collected"] <- "Year Petal Length"
+
+table7 <- dplyr::select(table7, !Df) # All degrees of freedom are 1
+table7 <- rownames_to_column(table7, var = "Trait")
+table7 <- mutate(table7, Model = "",
+                                     Dataset = "")
+colnames(table7)[3] = "P"
+colnames(table7)[2] <- "Chisq"
+
+table7 <- dplyr::select(table7, Model, Dataset, Trait, Chisq, P)
+
+newRow2 <- data.frame(Model = "Model 1: Mainland/Island", Dataset = "Flower", Trait = " ", Chisq = "1", P = "1")
+newRow2 <- newRow2 %>% mutate_at(vars(Chisq,
+                                    P), list(double))
+
+newRow2 <- dplyr::mutate(newRow2, Trait = "Petal Length", Chisq = 1.077345, P = 2.992922e-01)
+
+table7 <- bind_rows(newRow2, table7)
+table7 <- dplyr::slice(table7, (-c(2)))
+
 ```
 
 \newpage
 
 ### Leaf
 
-We found that leaves in island populations are longer, and have more leaflets than leaves in mainland populations. Leaves on islands are 20% longer, their leaflets are 7.5% larger and they have approximately 11% more leaflets than mainland populations (X^2(1)=[21.86], p = <0.001; X^2(1)=[4.86], p = 0.027; X^2(1)=[39.61], p = <0.001).
+We found that leaves in island populations are longer, and have more leaflets than leaves in mainland populations. Leaves on islands are 20% longer, their leaflets are 7.5% larger and they have approximately 11% more leaflets than mainland populations ($X^2$ = 21.86, p = \<0.001; $X^2$ = 4.86, p = 0.027; $X^2$ = 39.61, p = \<0.001). The effects of year were also significant for all three traits. ($X^2$ = 6.50 p = \<0.001; $X^2$ = 4.86, p = \<0.001).
 
 ```{r Univariate Model 1 Leaf, echo=FALSE, fig.cap= "Estimated means of leaf traits between island and mainland populations.", fig.width= 8, fig.height=5}
 
@@ -105,12 +164,45 @@ figure_leaf_model1 <- ggarrange(ggplot_leaf,
 figure_leaf_model1
 ```
 
-```{r anova leaf model 1, echo=FALSE, results='asis'}
-knitr::kable(Anova(leaf_length_m3), caption = "ANOVA Leaf Length (mm)")
+```{r anova leaf model 1, include=FALSE, results='asis'}
+table6 <- (Anova(leaf_length_m3))
 
-knitr::kable(Anova(leaflet_length_m2), caption = "ANOVA Leaflet Length (mm)")
+row.names(table6)[row.names(table6) == "mainland_island"] <- " Leaf Length"
+row.names(table6)[row.names(table6) == "year_collected"] <- "Year Leaf Length"
 
-knitr::kable(Anova(leaflet_num_m5), caption = "ANOVA Leaf Number")
+table8 <- (Anova(leaflet_length_m2))
+
+
+row.names(table8)[row.names(table8) == "mainland_island"] <- " Leaflet Length"
+row.names(table8)[row.names(table8) == "year_collected"] <- "Year Leaflet Length"
+
+table9 <- (Anova(leaflet_num_m5))
+
+row.names(table9)[row.names(table9) == "mainland_island"] <- " Leaf Number"
+row.names(table9)[row.names(table9) == "year_collected"] <- "Year Leaf Number"
+
+leaf_tables <- bind_rows(table6, table8, table9)
+
+leaf_tables <- dplyr::select(leaf_tables, !Df) # All degrees of freedom are 1
+leaf_tables <- rownames_to_column(leaf_tables, var = "Trait")
+leaf_tables <- mutate(leaf_tables, Model = "",
+                                     Dataset = "")
+
+
+colnames(leaf_tables)[3] = "P"
+colnames(leaf_tables)[2] <- "Chisq"
+
+leaf_tables <- dplyr::select(leaf_tables, Model, Dataset, Trait, Chisq, P)
+
+newRow3 <- data.frame(Model = "Model 1: Mainland/Island", Dataset = "Leaf", Trait = "Leaf Length", Chisq = "1", P = "1")
+newRow3 <- newRow3 %>% mutate_at(vars(Chisq,
+                                    P), list(double))
+
+newRow3 <- dplyr::mutate(newRow3, Chisq = 21.861875, P = 2.929978e-06)
+
+leaf_tables <- bind_rows(newRow3, leaf_tables)
+leaf_tables <- dplyr::slice(leaf_tables, (-c(2)))
+
 ```
 
 \newpage
@@ -119,7 +211,7 @@ knitr::kable(Anova(leaflet_num_m5), caption = "ANOVA Leaf Number")
 
 ### Flower
 
-We found that *Tribulus* flowers in the Galapagos are smaller than flowers of populations from other islands. Petal length of *Tribulus* on the Galapagos is 46% shorter than petal length from other islands (X^2(1)=[156.39], p = <0.001).
+We found that *Tribulus* flowers in the Galapagos are smaller than flowers of populations from other islands. Petal length of *Tribulus* on the Galapagos is 46% shorter than petals from other islands ($X^2$ = 156.39, p = \<0.001). The effect of year has also significant between the two groups ($X^2$ = 10.13, p = 0.0014)
 
 ```{r Univariate Model 2 Flowers, echo=FALSE, fig.cap= "Estimated means of petal length between the Galapagos and other islands populations.", fig.height=5}
 
@@ -128,14 +220,36 @@ ggplot_flower2
 ```
 
 ```{r anova flower model 2, echo=FALSE, results='asis'}
-knitr::kable(Anova(flower_m9), caption = "ANOVA Petal Length (mm)")
+table10 <- (Anova(flower_m9))
+
+row.names(table10)[row.names(table10) == "galapagos_other"] <- " Petal Length"
+row.names(table10)[row.names(table10) == "year_collected"] <- "Year Petal Length"
+
+table10 <- dplyr::select(table10, !Df) # All degrees of freedom are 1
+table10 <- rownames_to_column(table10, var = "Trait")
+table10 <- mutate(table10, Model = "",
+                                     Dataset = "")
+colnames(table10)[3] = "P"
+colnames(table10)[2] <- "Chisq"
+
+table10 <- dplyr::select(table10, Model, Dataset, Trait, Chisq, P)
+
+newRow4 <- data.frame(Model = "Model 2: Galapagos/Other Islands", Dataset = "Flower", Trait = "Petal Length", Chisq = "1", P = "1")
+newRow4 <- newRow4 %>% mutate_at(vars(Chisq,
+                                    P), list(double))
+
+newRow4 <- dplyr::mutate(newRow4, Chisq = 156.39806, P = 6.929188e-36)
+
+table10 <- bind_rows(newRow4, table10)
+table10 <- dplyr::slice(table10, (-c(2)))
+
 ```
 
 \newpage
 
 ### Leaf
 
-We found that leaf length of population from the Galapagos are smaller than populations from other islands. Leaves are 22% shorter, leaflets are 18.5% shorter compared to other island populations (X^2(1)=[20.39], p = <0.001; X^2(1)=[17.20], p = <0.001). However there were not significant differences for the number of leaflets between Galapagos and other island populations (p = 0.17).
+We found that leaf length of population from the Galapagos are smaller than populations from other islands. Leaves are 22% shorter and leaflets are 18.5% shorter compared to other island populations ($X^2$ = 20.39, p = \<0.001; $X^2$ = 17.20, p = \<0.001). However there were not significant differences for the number of leaflets between Galapagos and other island populations (p = 0.17). The effect of year was not significant for both leaf and leaflet length (p = 0.44, p = 0.347).
 
 ```{r Univariate Model 2 Leaf, echo=FALSE, fig.cap= "Estimated means of leaf traits between the Galapagos and other island populations.", fig.width= 8, fig.height=5}
 
@@ -150,12 +264,43 @@ figure_leaf_model2 <- ggarrange(ggplot_leaf2,
 figure_leaf_model2
 ```
 
-```{r anova leaf model 2, echo=FALSE, results='asis'}
-knitr::kable(Anova(leaf_length_m5), caption = "ANOVA Leaf Length (mm)")
+```{r anova leaf model 2, include=FALSE, results='asis'}
+table11 <- (Anova(leaf_length_m5))
 
-knitr::kable(Anova(leaflet_length_m5), caption = "ANOVA Leaflet Length (mm)")
+table12 <- (Anova(leaflet_length_m5))
 
-knitr::kable(Anova(leaflet_num_m8), caption = "ANOVA Leaf Number")
+table13 <- (Anova(leaflet_num_m8))
+
+row.names(table11)[row.names(table11) == "galapagos_other"] <- " Leaf Length"
+row.names(table11)[row.names(table11) == "year_collected"] <- "Year Leaf Length"
+
+row.names(table12)[row.names(table12) == "galapagos_other"] <- " Leaflet Length"
+row.names(table12)[row.names(table12) == "year_collected"] <- "Year Leaflet Length"
+
+row.names(table13)[row.names(table13) == "galapagos_other"] <- " Leaf Number"
+row.names(table13)[row.names(table13) == "year_collected"] <- "Year Leaf Number"
+
+leaf_tables2 <- bind_rows(table11, table12, table13)
+
+leaf_tables2 <- dplyr::select(leaf_tables2, !Df) # All degrees of freedom are 1
+leaf_tables2 <- rownames_to_column(leaf_tables2, var = "Trait")
+leaf_tables2 <- mutate(leaf_tables2, Model = "",
+                                     Dataset = "")
+colnames(leaf_tables2)[3] = "P"
+colnames(leaf_tables2)[2] <- "Chisq"
+
+leaf_tables2 <- dplyr::select(leaf_tables2, Model, Dataset, Trait, Chisq, P)
+
+newRow5 <- data.frame(Model = "Model 2: Galapagos/Other Islands", Dataset = "Leaf", Trait = "Leaf Length", Chisq = "1", P = "1")
+newRow5 <- newRow5 %>% mutate_at(vars(Chisq,
+                                    P), list(double))
+
+newRow5 <- dplyr::mutate(newRow5, Chisq = 20.3974384, P = 6.291395e-06
+)
+
+leaf_tables2 <- bind_rows(newRow5, leaf_tables2)
+leaf_tables2 <- dplyr::slice(leaf_tables2, (-c(2)))
+
 ```
 
 \newpage
@@ -164,7 +309,7 @@ knitr::kable(Anova(leaflet_num_m8), caption = "ANOVA Leaf Number")
 
 ### Mericarp
 
-The presence of large beak finch species, *Geospiza magnirrostris* and *Geospiza cornirostris* was significantly associated with the presence of lower spines (X^2(1)=[125.47], p = <0.001). However, mericarp length, width, depth and spine tip distance were not significant (p = 0.08, p = 0.58, p = 0.37, p = 0.25). 
+The presence of large beak finch species, *Geospiza magnirrostris* and *Geospiza cornirostris* was significantly associated with the presence of lower spines ($X^2$ = 125.47, p = \<0.001). However, mericarp length, width, depth and spine tip distance were not significant (p = 0.08, p = 0.58, p = 0.37, p = 0.25). The effect of year was significant for lower spines ($X^2$ = 17.414, p = \<0.001) but not significant for the other traits (p = 0.69; p = 0.32; p = 0.11; p = 0.94).
 
 ```{r Univariate Model 3 Mericarps, echo=FALSE, fig.cap= "Estimated means of mericarp traits between finch beak communities. 1 = Presence of large finch species, *Geospiza magnirrostris* and *Geospiza cornirostris*. 0 = Absence of large finch species.", fig.height=5}
 
@@ -181,23 +326,67 @@ figure_mericarp_model3 <- ggarrange(ggplot_length2,
 figure_mericarp_model3
 ```
 
-```{r anova mericarps model 3, echo=FALSE, results='asis'}
-knitr::kable(Anova(meri_length_m4), caption = "ANOVA Length (mm)")
+```{r anova mericarps model 3, include=FALSE, results='asis'}
+table14 <- (Anova(meri_length_m4))
 
-knitr::kable(Anova(meri_width_m9), caption = "ANOVA Width (mm)")
+table15 <- (Anova(meri_width_m9))
 
-knitr::kable(Anova(meri_depth_m4), caption = "ANOVA Depth (mm)")
+table16 <- (Anova(meri_depth_m4))
 
-knitr::kable(Anova(meri_tip_distance_m16), caption = "ANOVA Tip Distance (mm)")
+table17 <- (Anova(meri_tip_distance_m16))
 
-knitr::kable(Anova(meri_lower_spines_m2), caption = "ANOVA Lower Spines")
+table18 <- (Anova(meri_lower_spines_m2))
+
+row.names(table14)[row.names(table14) == "finch_beak"] <- "Length"
+row.names(table14)[row.names(table14) == "year_collected"] <- "Year Length"
+
+row.names(table15)[row.names(table15) == "finch_beak"] <- "Width"
+row.names(table15)[row.names(table15) == "year_collected"] <- "Year Width"
+
+row.names(table16)[row.names(table16) == "finch_beak"] <- "Depth"
+row.names(table16)[row.names(table16) == "year_collected"] <- "Year Depth"
+
+row.names(table17)[row.names(table17) == "finch_beak"] <- "Tip Distance"
+row.names(table17)[row.names(table17) == "year_collected"] <- "Year Tip Distance"
+
+row.names(table18)[row.names(table18) == "finch_beak"] <- "Lower Spines"
+row.names(table18)[row.names(table18) == "year_collected"] <- "Year Lower Spines"
+
+mericarp_tables2 <- bind_rows(table14, table15, table16, table17, table18)
+
+mericarp_tables2 <- dplyr::select(mericarp_tables2, !Df) # All degrees of freedom are 1
+mericarp_tables2 <- rownames_to_column(mericarp_tables2, var = "Trait")
+mericarp_tables2 <- mutate(mericarp_tables2, Model = "",
+                                     Dataset = "")
+
+
+colnames(mericarp_tables2)[3] = "P"
+colnames(mericarp_tables2)[2] <- "Chisq"
+colnames(mericarp_tables2)[4] <- "Chisq1"
+mericarp_tables2[is.na(mericarp_tables2)] = 0
+mericarp_tables2 <- dplyr::mutate(mericarp_tables2, Chisq2 = Chisq + Chisq1)
+
+mericarp_tables2 <- dplyr::select(mericarp_tables2, Trait, Chisq2, P)
+colnames(mericarp_tables2)[2] <- "Chisq"
+
+newRow6 <- data.frame(Model = "Model 3: Finch Beak Presence/Absence", Dataset = "Mericarp", Trait = "Length", Chisq = "1", P = "1")
+
+newRow6 <- newRow6 %>% mutate_at(vars(Chisq,
+                                    P), list(double))
+
+newRow6 <- dplyr::mutate(newRow6, Chisq = 3.017541204, P = 8.236826e-02
+)
+
+mericarp_tables2 <- bind_rows(newRow6, mericarp_tables2)
+mericarp_tables2 <- dplyr::slice(mericarp_tables2, (-c(2)))
+mericarp_tables2[is.na(mericarp_tables2)] = ""
 ```
 
 \newpage
 
 ### Flower
 
-There was no statistically significant difference for petal length between islands with large beak finches present and absent (p = 0.55)
+There was no statistically significant difference for petal length and year between islands with large beak finches present and absent (p = 0.55; p = 0.009)
 
 ```{r Univariate Model 3 Flowers, echo=FALSE, fig.cap= "Estimated means of petal length between finch beak communities. 1 = Presence of large finch species, *Geospiza magnirrostris* and *Geospiza cornirostris*. 0 = Absence of large finch species.", fig.height=5}
 
@@ -205,15 +394,37 @@ ggplot_flower3
 
 ```
 
-```{r anova flower model 3, echo=FALSE, results='asis'}
-knitr::kable(Anova(flower_m12), caption = "ANOVA Petal Length (mm)")
+```{r anova flower model 3, include=FALSE, results='asis'}
+table19 <- (Anova(flower_m12))
+
+row.names(table19)[row.names(table19) == "finch_beak"] <- " Petal Length"
+row.names(table19)[row.names(table19) == "year_collected"] <- "Year Petal Length"
+
+table19 <- dplyr::select(table19, !Df) # All degrees of freedom are 1
+table19 <- rownames_to_column(table19, var = "Trait")
+table19 <- mutate(table19, Model = "",
+                                     Dataset = "")
+colnames(table19)[3] = "P"
+colnames(table19)[2] <- "Chisq"
+
+table19 <- dplyr::select(table19, Model, Dataset, Trait, Chisq, P)
+
+newRow7 <- data.frame(Model = "Model 3: Finch Beak Presence/Absence", Dataset = "Flower", Trait = "Petal Length", Chisq = "1", P = "1")
+
+newRow7 <- newRow7 %>% mutate_at(vars(Chisq,
+                                    P), list(double))
+
+newRow7 <- dplyr::mutate(newRow7, Chisq = 0.3459436, P = 0.55641838)
+
+table19 <- bind_rows(newRow7, table19)
+table19 <- dplyr::slice(table19, (-c(2)))
 ```
 
 \newpage
 
 ### Leaf
 
-There is not statistically significant difference between islands with large finch beak species present and absent for all three leaf traits, leaf length, leaflet length and leaf number (p = 0.17; p = p = 0.15; p = 0.73).
+There is not statistically significant difference between islands with large finch beak species present and absent for all three leaf traits, leaf length, leaflet length and leaf number (p = 0.17; p = p = 0.15; p = 0.73). However there was a significant effect of year for leaf length and leaflet number ($X^2$ = 12.85, p = \<0.001; $X^2$ = 11.98, p = \<0.001). The effect of year for leaflet length was barely significant ($X^2$ = 3.7091, p = \<0.0542).
 
 ```{r Univariate Model 3 Leaf, echo=FALSE, fig.cap= "Estimated means of leaf traits between finch beak communities. 1 = Presence of large finch species, *Geospiza magnirrostris* and *Geospiza cornirostris*. 0 = Absence of large finch species.", fig.width= 8, fig.height= 5}
 
@@ -228,12 +439,73 @@ figure_leaf_model3 <- ggarrange(ggplot_leaf3,
 figure_leaf_model3
 ```
 
-```{r anova leaf model 3, echo=FALSE, results='asis'}
-knitr::kable(Anova(leaf_length_m9), caption = "ANOVA Leaf Length (mm)")
+```{r anova leaf model 3, include=FALSE, results='asis'}
+table20 <- (Anova(leaf_length_m9))
 
-knitr::kable(Anova(leaflet_length_m8), caption = "ANOVA Leaflet Length (mm)")
+table21 <- (Anova(leaflet_length_m8))
 
-knitr::kable(Anova(leaflet_num_m10), caption = "ANOVA Leaf Number")
+table22 <- (Anova(leaflet_num_m10))
+
+row.names(table20)[row.names(table20) == "finch_beak"] <- " Leaf Length"
+row.names(table20)[row.names(table20) == "year_collected"] <- "Year Leaf Length"
+
+row.names(table21)[row.names(table21) == "finch_beak"] <- " Leaflet Length"
+row.names(table21)[row.names(table21) == "year_collected"] <- "Year Leaflet Length"
+
+row.names(table22)[row.names(table22) == "finch_beak"] <- " Leaf Number"
+row.names(table22)[row.names(table22) == "year_collected"] <- "Year Leaf Number"
+colnames(table22)[1] = "Chisq"
+
+leaf_tables3 <- bind_rows(table20, table21, table22)
+
+leaf_tables3 <- dplyr::select(leaf_tables3, !Df) # All degrees of freedom are 1
+leaf_tables3 <- rownames_to_column(leaf_tables3, var = "Trait")
+leaf_tables3 <- mutate(leaf_tables3, Model = "",
+                                     Dataset = "")
+colnames(leaf_tables3)[3] = "P"
+colnames(leaf_tables3)[2] <- "Chisq"
+
+leaf_tables3 <- dplyr::select(leaf_tables3, Model, Dataset, Trait, Chisq, P)
+
+newRow8 <- data.frame(Model = "Model 3: Finch Beak: Presence/Absence", Dataset = "Leaf", Trait = "Leaf Length", Chisq = "1", P = "1")
+newRow8 <- newRow8 %>% mutate_at(vars(Chisq,
+                                    P), list(double))
+
+newRow8 <- dplyr::mutate(newRow8, Chisq = 1.8787 , P = 0.17048
+)
+
+leaf_tables3 <- bind_rows(newRow8, leaf_tables3)
+leaf_tables3 <- dplyr::slice(leaf_tables3, (-c(2)))
+
+
+```
+
+\newpage
+
+# Univariate ANOVA table summary
+
+```{r anova table mericarp model 1, include=FALSE}
+
+anova_tables <- bind_rows(mericarp_tables,
+                          table7,
+                          leaf_tables,
+                          table10,
+                          leaf_tables2,
+                          mericarp_tables2,
+                          table19,
+                          leaf_tables3)
+
+
+
+
+```
+
+```{r univariate table, echo=FALSE, results='asis'}
+
+writeLines("td, th { padding : 6px } th { background-color : brown ; color : white; border : 1px solid white; } td { color : brown ; border : 1px solid brown }", con = "mystyle.css")
+
+knitr::kable(anova_tables, format = "html")
+
 ```
 
 \newpage
@@ -244,24 +516,36 @@ knitr::kable(Anova(leaflet_num_m10), caption = "ANOVA Leaf Number")
 
 ### Mericarp
 
-```{r Model 1 mericarp PCA biplot, echo=F, results='asis', fig.align='right'}
+We observed that mericarps from islands and mainlands populations differed in size and number of spines. Mericarps on islands are larger than mericarps on the mainland with depth being the variable that contributes more to the variation of mericarp size. For spines, the presence of lower spines was more related to mainland populations than to island populations and was the variable that contribute to most of the variation between the two groups.
 
-biplot1 <- fviz_pca_biplot(mericarp_pca, repel = T,
+```{r Model 1 mericarp PCA biplot, echo=FALSE, fig.align='right', fig.height=8, fig.width=8, warning=FALSE, results='asis'}
+
+biplot1  <- fviz_pca_biplot(mericarp_pca, repel = T,
                 geom = c("point"),
                 habillage = mericarp_summary$mainland_island,
                 col.var = "black",
                 addEllipses = T,
                 label = "all",
-                labelsize = 4,
-                pointsize = 2,
+                labelsize = 5,
+                pointsize = 2.5,
                 ellipse.level = 0.95,
-                ) +labs(title = "Biplot - PCA Mericarps")
+                title = "Model 1: Mericarps PCA") + scale_color_manual(values = c("#FFB90F", "#006400")) + theme_transparent() + theme(
+                  legend.position = "bottom",
+                  axis.line = element_line(size = 1.2, linetype = "solid"), 
+                  axis.ticks = element_line(size = 1), 
+                  axis.title = element_text(size = 14), 
+                  axis.text = element_text(size = 12), 
+                  axis.text.x = element_text(size = 12), 
+                  plot.title = element_text(size = 18, vjust = 2.5),
+                  legend.text = element_text(size = 12, face = "bold"), 
+                  legend.title = element_text(size = 14, face = "bold"), 
+                  legend.background = element_rect(fill = NA, size = 0)) + theme(plot.title = element_text(hjust = 0)) + ylim(-4.5, 4.5) + xlim(-4,6)
 
 var1 <- fviz_pca_var(mericarp_pca,
              col.var = "contrib",
              gradient.cols = c("#00AFBB", "#E7B800", "#FC4E07"),
              repel = TRUE 
-             ) +labs(title = "Variables - PCA Mericarps")
+             ) +labs(title = "Variables - Model 1: PCA Mericarps")
 
 biplot1
 var1
@@ -269,89 +553,212 @@ var1
 
 ### Leaf
 
-```{r Model 1 PCA Leaf, echo=F,results='asis', fig.align='right'}
+Leaves are larger on islands than in the mainland. This size difference also contributes to the number of leaflets present, with island populations habving more. This trait is the main difference between the two groups.
+
+```{r Model 1 PCA Leaf, echo=FALSE, fig.align='right', fig.height=8, fig.width=8, results='asis'}
 
 #Biplot
-fviz_pca_biplot(leaf_pca, repel = T,
+biplot2  <- fviz_pca_biplot(leaf_pca, repel = T,
                 geom = c("point"),
                 habillage = leaf_summary$mainland_island,
                 col.var = "black",
-                addEllipses = T
-)
+                addEllipses = T,
+                label = "all",
+                labelsize = 5,
+                pointsize = 2.5,
+                ellipse.level = 0.95,
+                title = "Model 1: Leaf PCA") + scale_color_manual(values = c("#FFB90F", "#006400")) + theme_transparent() + theme(
+                  legend.position = "bottom",
+                  axis.line = element_line(size = 1.2, linetype = "solid"), 
+                  axis.ticks = element_line(size = 1), 
+                  axis.title = element_text(size = 14), 
+                  axis.text = element_text(size = 12), 
+                  axis.text.x = element_text(size = 12), 
+                  plot.title = element_text(size = 18, vjust = 2.5),
+                  legend.text = element_text(size = 12, face = "bold"), 
+                  legend.title = element_text(size = 14, face = "bold"), 
+                  legend.background = element_rect(fill = NA, size = 0)) + theme(plot.title = element_text(hjust = 0)) + ylim(-4.5, 4.5)
+
 
 # Variables
-fviz_pca_var(leaf_pca,
+var2 <- fviz_pca_var(leaf_pca,
              col.var = "contrib",
              gradient.cols = c("#00AFBB", "#E7B800", "#FC4E07"),
              repel = TRUE 
 )
 
-
+biplot2
+var2
 ```
 
+```{r Model 1 biplots all, eval=FALSE, warning=FALSE, include=FALSE}
+model1_biplots <- ggarrange(biplot1,
+                            biplot2,
+                            labels = c("A", "B"),
+                            ncol = 2,
+                            nrow = 1)
+                                    
 
+model1_biplots
+```
+
+\newpage
+
+```{r Model 1 variables all, eval=FALSE, fig.height=5, fig.width=10, include=FALSE}
+model1_var <- ggarrange(var1,
+                            var2,
+                            labels = c("A", "B"),
+                            ncol = 2,
+                            nrow = 1)
+                                    
+
+model1_var
+```
+
+\newpage
 
 ## Model 2: Galapagos/Other
 
 ### Leaf
 
-```{r Model 2 leaf PCA biplot, echo=F, results='asis', fig.align='right'}
+Leaves from the Galapagos Islands are smaller than other island populations. *Tribulus* leaves in the Galapagos are smaller and have less leaflets than other Islands.
+
+```{r Model 2 leaf PCA biplot, echo=F, fig.align='right', fig.height=8, fig.width=8, results='asis'}
 
 #Biplot
-fviz_pca_biplot(leaf_pca_model2, repel = T,
+biplot3  <- fviz_pca_biplot(leaf_pca_model2, repel = T,
                 geom = c("point"),
                 habillage = leaf_summary_model2$galapagos_other,
                 col.var = "black",
-                addEllipses = T
-)
+                addEllipses = T,
+                label = "all",
+                labelsize = 5,
+                pointsize = 2.5,
+                ellipse.level = 0.95,
+                title = "Model 2: Leaf PCA") + scale_color_manual(values = c("#9B30FF", "#4876FF")) + theme_transparent() + theme(
+                  legend.position = "bottom",
+                  axis.line = element_line(size = 1.2, linetype = "solid"), 
+                  axis.ticks = element_line(size = 1), 
+                  axis.title = element_text(size = 14), 
+                  axis.text = element_text(size = 12), 
+                  axis.text.x = element_text(size = 12), 
+                  plot.title = element_text(size = 18, vjust = 2.5),
+                  legend.text = element_text(size = 12, face = "bold"), 
+                  legend.title = element_text(size = 14, face = "bold"), 
+                  legend.background = element_rect(fill = NA, size = 0)) + theme(plot.title = element_text(hjust = 0))
+
 
 # Variables
-fviz_pca_var(leaf_pca_model2,
+var3 <- fviz_pca_var(leaf_pca_model2,
              col.var = "contrib",
              gradient.cols = c("#00AFBB", "#E7B800", "#FC4E07"),
              repel = TRUE 
 )
 
+biplot3
+var3
 ```
+
+\newpage
 
 ## Model 3: Finch Beak
 
 ### Mericarp
 
-```{r Model 3 mericarp PCA biplot, echo=F, results='asis', fig.align='right'}
+The presence of lower spines is by far the trait that contributes most to the differences between groups. This means that the presence of lower spines are associated with large beak finches. Mericarp size contributes 54% of the variation but is not particularly associated with any group.
+
+```{r Model 3 mericarp PCA biplot, echo=FALSE, fig.align='right', fig.height=8, fig.width=8, results='asis'}
 #Biplot
-fviz_pca_biplot(mericarp_pca_model3, repel = T,
+biplot4  <- fviz_pca_biplot(mericarp_pca_model3, repel = T,
                 geom = c("point"),
                 habillage = mericarp_summary_model3$finch_beak,
                 col.var = "black",
-                addEllipses = T
-)
+                addEllipses = T,
+                label = "all",
+                labelsize = 5,
+                pointsize = 2.5,
+                ellipse.level = 0.95,
+                title = "Model 3: Mericarp PCA") + scale_color_manual(values = c("dark red", " blue")) + theme_transparent() + theme(
+                  legend.position = "bottom",
+                  axis.line = element_line(size = 1.2, linetype = "solid"), 
+                  axis.ticks = element_line(size = 1), 
+                  axis.title = element_text(size = 14), 
+                  axis.text = element_text(size = 12), 
+                  axis.text.x = element_text(size = 12), 
+                  plot.title = element_text(size = 18, vjust = 2.5),
+                  legend.text = element_text(size = 12, face = "bold"), 
+                  legend.title = element_text(size = 14, face = "bold"), 
+                  legend.background = element_rect(fill = NA, size = 0)) + theme(plot.title = element_text(hjust = 0)) + ylim(-3.5,3.5) + xlim(-5.5,5.5)
 
 # Variables
-fviz_pca_var(mericarp_pca_model3,
+var4 <- fviz_pca_var(mericarp_pca_model3,
              col.var = "contrib",
              gradient.cols = c("#00AFBB", "#E7B800", "#FC4E07"),
              repel = TRUE 
 )
 
+biplot4
+var4
 ```
 
 ### Leaf
 
-```{r Model 3 leaf PCA biplot, echo=F, results='asis', fig.align='right'}
+Leaf size and leaflet number is not particularly associated with any group of finches.
+
+```{r Model 3 leaf PCA biplot, echo=FALSE, fig.align='right', fig.height=8, fig.width=8, results='asis'}
 
 #Biplot
-fviz_pca_biplot(leaf_pca_model3, repel = T,
+biplot5  <- fviz_pca_biplot(leaf_pca_model3, repel = T,
                 geom = c("point"),
                 habillage = leaf_summary_model3$finch_beak,
                 col.var = "black",
-                addEllipses = T
-)
+                addEllipses = T,
+                label = "all",
+                labelsize = 5,
+                pointsize = 2.5,
+                ellipse.level = 0.95,
+                title = "Model 2: Leaf PCA") + scale_color_manual(values = c("dark red", " blue")) + theme_transparent() + theme(
+                  legend.position = "bottom",
+                  axis.line = element_line(size = 1.2, linetype = "solid"), 
+                  axis.ticks = element_line(size = 1), 
+                  axis.title = element_text(size = 14), 
+                  axis.text = element_text(size = 12), 
+                  axis.text.x = element_text(size = 12), 
+                  plot.title = element_text(size = 18, vjust = 2.5),
+                  legend.text = element_text(size = 12, face = "bold"), 
+                  legend.title = element_text(size = 14, face = "bold"), 
+                  legend.background = element_rect(fill = NA, size = 0)) + theme(plot.title = element_text(hjust = 0)) + ylim(-3.5,3.5) + xlim(-5.5,5.5)
+
 # Variables
-fviz_pca_var(leaf_pca_model3,
+var5 <- fviz_pca_var(leaf_pca_model3,
              col.var = "contrib",
              gradient.cols = c("#00AFBB", "#E7B800", "#FC4E07"),
              repel = TRUE 
 )
 
+biplot5
+var5
+
+```
+
+```{r Model 3 biplots all, eval=FALSE, include=FALSE}
+model3_biplots <- ggarrange(biplot4,
+                            biplot5,
+                            labels = c("A", "B"),
+                            ncol = 2,
+                            nrow = 1)
+                                    
+
+model3_biplots
+```
+
+```{r Model 3 variables all, eval=FALSE, fig.height=5, fig.width=10, include=FALSE}
+model3_var <- ggarrange(var4,
+                            var5,
+                            labels = c("A", "B"),
+                            ncol = 2,
+                            nrow = 1)
+                                    
+
+model3_var
 ```
